# simpleScript

./: CMakeLists.txt  README.md
craft/: ast.c  ast.h  lexer.c  lexer.h  main.c  parser.c  parser.h  simpleScript.c  simpleScript.h  token.c  token.h  variable.c  variable.h
